# Pandora_STM32L475_Zephyr

./: README.md  west.yml
demo/lvgl/: CMakeLists.txt  prj.conf
demo/lvgl/boards/arm/pandora_stm32l475/: pandora_stm32l475.dts
demo/lvgl/drivers/display/: Kconfig.st7789v  display_st7789v.h
demo/lvgl/src/: main.c
demo/lvgl/src/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_font.c
demo/lvgl/src/ui/images/: ui_img__angle_left_double_png.c  ui_img__charging_0_png.c  ui_img__charging_10_png.c  ui_img__charging_1_png.c  ui_img__charging_2_png.c  ui_img__charging_3_png.c  ui_img__charging_4_png.c  ui_img__charging_5_png.c  ui_img__charging_6_png.c  ui_img__charging_7_png.c  ui_img__charging_8_png.c  ui_img__charging_9_png.c  ui_img__guide_scan_png.c  ui_img__launcher_composition_png.c  ui_img__launcher_scan_png.c  ui_img__launcher_setting_png.c  ui_img__status_battery_1_png.c  ui_img__status_battery_2_png.c  ui_img__status_wifi_0_png.c  (+11 more)
docs/Hardware/ALIENTEK潘多拉STM32L475开发板原理图/: readme.txt
projects/drivers/display/: CMakeLists.txt
projects/drivers/i2c/icm20608/: CMakeLists.txt  prj.conf
projects/drivers/i2c/shell_scan/: README.md  prj.conf
projects/drivers/spi_flash/: CMakeLists.txt
projects/lvgl/lvgl/: CMakeLists.txt  Kconfig  prj.conf
projects/lvgl/lvgl/boards/arm/pandora_stm32l475/: pandora_stm32l475.dts
projects/lvgl/lvgl/drivers/display/: display_st7789v.c
projects/lvgl/lvgl/dts/bindings/display/: curstom,st7789v.yaml
projects/subsys/usb/cdc_acm/: CMakeLists.txt
projects/subsys/usb/cdc_acm/boards/arm/pandora_stm32l475/: pandora_stm32l475.dts
(+10 files in other folders)
